--- a/index.html
+++ b/index.html
@@ -1353,10 +1353,10 @@
             <div class="contact-info">
               <div class="contact-item">
                 <span>📍</span>
-                <span
-                  >Dawat Restaurant, Premium Location<br />City Center, Near
-                  Landmark</span
-                >
+                <span>
+                  Khudanpuri Rd, Jat Colony, Sakti Nagar<br />Alwar, Rajasthan
+                  301001
+                </span>
               </div>
               <div class="contact-item">
                 <span>📞</span>
