--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
         background: var(--soft-gold);
         transition: all 0.3s ease;
       }
+      .mobile-menu.active span:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+      }
+
+      .mobile-menu.active span:nth-child(2) {
+        opacity: 0;
+      }
+
+      .mobile-menu.active span:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -7px);
+      }
 
       /* Hero Section */
       .hero {
@@ -948,6 +959,60 @@
       @media (max-width: 768px) {
         .nav-links {
           display: none;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          width: 100%;
+          background: rgba(10, 14, 26, 0.98);
+          flex-direction: column;
+          padding: 2rem;
+          gap: 1.5rem;
+          border-top: 1px solid rgba(212, 175, 55, 0.2);
+          max-height: 0;
+          overflow: hidden;
+          opacity: 0;
+          transform: translateY(-20px);
+          transition:
+            max-height 0.4s ease,
+            opacity 0.3s ease,
+            transform 0.3s ease;
+        }
+
+        .nav-links.active {
+          display: flex;
+          max-height: 500px;
+          opacity: 1;
+          transform: translateY(0);
+        }
+        .nav-links li {
+          opacity: 0;
+          transform: translateX(-20px);
+          animation: slideIn 0.3s ease forwards;
+        }
+
+        .nav-links.active li:nth-child(1) {
+          animation-delay: 0.1s;
+        }
+
+        .nav-links.active li:nth-child(2) {
+          animation-delay: 0.2s;
+        }
+
+        .nav-links.active li:nth-child(3) {
+          animation-delay: 0.3s;
+        }
+        .nav-links.active li:nth-child(4) {
+          animation-delay: 0.4s;
+        }
+
+        .nav-links.active li:nth-child(5) {
+          animation-delay: 0.5s;
+        }
+        @keyframes slideIn {
+          to {
+            opacity: 1;
+            transform: translateX(0);
+          }
         }
 
         .mobile-menu {
@@ -1437,6 +1502,23 @@
         } else {
           navbar.classList.remove("scrolled");
         }
+      });
+
+      // Mobile menu toggle
+      const mobileMenu = document.querySelector(".mobile-menu");
+      const navLinks = document.querySelector(".nav-links");
+
+      mobileMenu.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+        mobileMenu.classList.toggle("active");
+      });
+
+      // Close mobile menu when clicking a link
+      document.querySelectorAll(".nav-links a").forEach((link) => {
+        link.addEventListener("click", () => {
+          navLinks.classList.remove("active");
+          mobileMenu.classList.remove("active");
+        });
       });
 
       // Smooth scroll for navigation links
